--- a/app/src/main/res/layout-w900dp/fragment_delivery_list.xml
+++ b/app/src/main/res/layout-w900dp/fragment_delivery_list.xml
@@ -10,23 +10,13 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context=".ItemListActivity">
+    tools:context=".ui.DeliveryListActivity">
 
     <!--
     This layout is a two-pane layout for the Items master/detail flow.
     -->
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/item_list"
-        android:name="com.yychun1217.mychallenge.ItemListFragment"
-        android:layout_width="@dimen/item_width"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="com.yychun1217.mychallenge.ItemListActivity"
-        tools:listitem="@layout/item_list_content" />
+    <include layout="@layout/layout_delivery_list" />
 
     <FrameLayout
         android:id="@+id/item_detail_container"
