--- a/app/src/main/res/layout/activity_delivery_list.xml
+++ b/app/src/main/res/layout/activity_delivery_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ItemListActivity">
+    tools:context=".ui.DeliveryListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -27,7 +27,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/item_list" />
+        <include layout="@layout/fragment_delivery_list" />
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
