--- a/app/src/main/res/layout/layout_delivery_list.xml
+++ b/app/src/main/res/layout/layout_delivery_list.xml
@@ -2,12 +2,12 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_list"
+    android:id="@+id/delivery_list"
     android:name="com.yychun1217.mychallenge.ItemListFragment"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/item_width"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ItemListActivity"
-    tools:listitem="@layout/item_list_content" />
+    tools:context="com.yychun1217.mychallenge.ui.DeliveryListActivity"
+    tools:listitem="@layout/delivery_list_content" />
