--- a/app/src/main/res/layout/layout_delivery_list.xml
+++ b/app/src/main/res/layout/layout_delivery_list.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/delivery_list"
-    android:name="com.yychun1217.mychallenge.ItemListFragment"
-    android:layout_width="@dimen/item_width"
+    android:id="@+id/main"
+    android:name="com.yychun1217.mychallenge.ui.DeliveryListFragment"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="com.yychun1217.mychallenge.ui.DeliveryListActivity"
-    tools:listitem="@layout/delivery_list_content" />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
