--- a/app/src/main/res/layout/fragment_delivery_list.xml
+++ b/app/src/main/res/layout/fragment_delivery_list.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge>
-    <include layout="@layout/layout_delivery_list" />
-</merge>
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/delivery_list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layoutManager="LinearLayoutManager"
+    tools:context="com.yychun1217.mychallenge.ui.DeliveryListActivity"
+    tools:listitem="@layout/delivery_list_item" />
