1. fix delivery's good picture ratio 4:3 2. fix delivery list not show

--- a/app/src/main/res/layout-w900dp/layout_delivery_list.xml
+++ b/app/src/main/res/layout-w900dp/layout_delivery_list.xml
@@ -17,9 +17,9 @@
     -->
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/main"
+        android:id="@+id/nav_host_fragment"
         android:name="com.yychun1217.mychallenge.ui.DeliveryListFragment"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/delivery_list_item_width"
         android:layout_height="match_parent" />
 
     <FrameLayout
