--- a/app/src/main/res/layout/view_delivery_list_item.xml
+++ b/app/src/main/res/layout/view_delivery_list_item.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height">
+    android:layout_height="@dimen/delivery_list_item_height">
 
     <ImageView
         android:id="@+id/image_goods"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"
+        app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
