--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
-    <dimen name="item_height">80dp</dimen>
-    <dimen name="item_width">200dp</dimen>
     <dimen name="margin_small">5dp</dimen>
+
+    <!-- delivery list -->
+    <dimen name="delivery_list_item_height">80dp</dimen>
+    <dimen name="delivery_list_item_width">200dp</dimen>
 </resources>
