--- a/app/src/main/res/layout/fragment_delivery_list.xml
+++ b/app/src/main/res/layout/fragment_delivery_list.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/delivery_list"
+    android:id="@+id/list_delivery"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
