1. add dependency for 'navigation' component 2. add delivery detail page 3. add TwoPaneFragmentHostLayout to host menu/master fragment in two-pane mode

--- a/app/src/main/res/layout/activity_delivery_list.xml
+++ b/app/src/main/res/layout/activity_delivery_list.xml
@@ -21,6 +21,9 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/layout_delivery_list" />
+    <com.yychun1217.mychallenge.ui.TwoPaneFragmentHostLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
