implementation of favourite delivery in detail page

--- a/app/src/main/res/layout/fragment_delivery_detail.xml
+++ b/app/src/main/res/layout/fragment_delivery_detail.xml
@@ -22,8 +22,9 @@
             android:id="@+id/button_delivery_detail_favourite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableEnd="@{viewModel.delivery.favourite ? @android:drawable/star_on : @android:drawable/star_off}"
             android:onClick="@{() -> viewModel.toggleFavourite()}"
-            android:text="@string/delivery_detail_add_to_favourite"
+            android:text="@{viewModel.delivery.favourite ? @string/delivery_detail_remove_from_favourite : @string/delivery_detail_add_to_favourite}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
