--- a/app/src/main/res/layout-sw600dp/layout_two_pane_fragment_host.xml
+++ b/app/src/main/res/layout-sw600dp/layout_two_pane_fragment_host.xml
@@ -5,17 +5,17 @@
     android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_menu_fragment"
+        android:id="@+id/nav_master_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="@dimen/delivery_list_item_width"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph_menu" />
+        app:navGraph="@navigation/nav_graph_master" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_master_fragment"
+        android:id="@+id/nav_detail_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -24,5 +24,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nav_master_fragment"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph_master" />
+        app:navGraph="@navigation/nav_graph_detail" />
 </merge>
