--- a/app/src/main/res/navigation-sw600dp/nav_graph_detail.xml
+++ b/app/src/main/res/navigation-sw600dp/nav_graph_detail.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph_master"
+    android:id="@+id/nav_graph_detail"
     app:startDestination="@id/fragment_delivery_detail">
 
     <fragment
