--- a/app/src/main/res/navigation/nav_graph_master.xml
+++ b/app/src/main/res/navigation/nav_graph_master.xml
@@ -9,16 +9,7 @@
         android:id="@+id/fragment_delivery_list"
         android:name="com.yychun1217.mychallenge.ui.DeliveryListFragment"
         android:label="@string/label_delivery_list"
-        tools:layout="@layout/fragment_delivery_list">
-        <action
-            android:id="@+id/delivery_list_to_detail"
-            app:destination="@+id/fragment_delivery_detail">
-            <argument
-                android:name="id"
-                app:argType="string"
-                app:nullable="false" />
-        </action>
-    </fragment>
+        tools:layout="@layout/fragment_delivery_list" />
     <fragment
         android:id="@+id/fragment_delivery_detail"
         android:name="com.yychun1217.mychallenge.ui.DeliveryDetailFragment"
