--- a/app/src/main/res/layout/fragment_delivery_detail.xml
+++ b/app/src/main/res/layout/fragment_delivery_detail.xml
@@ -72,7 +72,7 @@
                         style="?attr/textAppearanceBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.delivery.from}"
+                        android:text="@{viewModel.delivery.route.from}"
                         android:textAlignment="textEnd"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_delivery_detail_from_label"
@@ -107,7 +107,7 @@
                         style="?attr/textAppearanceBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.delivery.to}"
+                        android:text="@{viewModel.delivery.route.to}"
                         android:textAlignment="textEnd"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_delivery_detail_to_label"
