1. fix cannot favourite delivery 2. set 'from' & 'to" columns in route table as unique, 'remoteId' column in delivery table as unique 3. add IDeliveryAndRouteContract entity, and DeliveryAndRouteDao

--- a/app/src/main/res/layout/fragment_delivery_detail.xml
+++ b/app/src/main/res/layout/fragment_delivery_detail.xml
@@ -18,16 +18,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/margin_small"
-        android:visibility="@{viewModel.delivery == null ? View.GONE : View.VISIBLE}"
+        android:visibility="@{viewModel.deliveryAndRoute == null ? View.GONE : View.VISIBLE}"
         tools:context=".ui.DeliveryDetailFragment">
 
         <Button
             android:id="@+id/button_delivery_detail_favourite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@{viewModel.delivery.favourite ? @android:drawable/star_on : @android:drawable/star_off}"
+            android:drawableEnd="@{viewModel.deliveryAndRoute.favourite ? @android:drawable/star_on : @android:drawable/star_off}"
             android:onClick="@{() -> viewModel.toggleFavourite()}"
-            android:text="@{viewModel.delivery.favourite ? @string/delivery_detail_remove_from_favourite : @string/delivery_detail_add_to_favourite}"
+            android:text="@{viewModel.deliveryAndRoute.favourite ? @string/delivery_detail_remove_from_favourite : @string/delivery_detail_add_to_favourite}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -72,7 +72,7 @@
                         style="?attr/textAppearanceBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.delivery.route.from}"
+                        android:text="@{viewModel.deliveryAndRoute.route.from}"
                         android:textAlignment="textEnd"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_delivery_detail_from_label"
@@ -107,7 +107,7 @@
                         style="?attr/textAppearanceBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.delivery.route.to}"
+                        android:text="@{viewModel.deliveryAndRoute.route.to}"
                         android:textAlignment="textEnd"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_delivery_detail_to_label"
@@ -175,7 +175,7 @@
                         style="?attr/textAppearanceBody1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@{String.format(@string/delivery_detail_price, viewModel.delivery.price)}"
+                        android:text="@{String.format(@string/delivery_detail_price, viewModel.deliveryAndRoute.price)}"
                         android:textAlignment="textEnd"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_delivery_detail_fee_label"
@@ -190,7 +190,7 @@
                     android:layout_margin="@dimen/margin_small"
                     android:background="@color/colorContentBackground"
                     android:padding="@dimen/margin_small"
-                    android:text="@{viewModel.delivery.remarks}"
+                    android:text="@{viewModel.deliveryAndRoute.remarks}"
                     android:textIsSelectable="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
